First half of homepage html has been added

--- a/faq/index.html
+++ b/faq/index.html
@@ -22,6 +22,23 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
+<!-- HEADER - Logo, Nav, Headline, Image -->
+<!-- Header: Logo, Nav bar> [About, FAQ] - Headline - Image **/ -->
+
+<header>
+  <div class="content-wrapper">
+    <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a> 
+    <div class="header-divider"></div>
+    <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+    </nav>  
+  </div>
+</header>
+
+
 <body>
 
   <!-- Add your site or application content here -->
@@ -37,5 +54,33 @@
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
+
+
+<!-- FOOTER - Contact, Social media, Copyright -->
+<!-- Footer: Contact> [Headline text, Contact info], Social media> [Headline text, Social icons], Copyright -->
+
+<footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+      <div class="contact">
+        <address>
+          <h4>Contact</h4>
+          <p>555-555-5555<br>hello@unplugged.com</p>
+        </address>
+      </div>
+      <div class="social-icons">
+        <h4>Social</h4>
+        <p><a href="https://www.facebook.com/" target="_blank"></a></p>
+        <p><a href="https://www.instagram.com/" target="_blank"></a></p>
+        <p><a href="https://www.twitter.com/" target="_blank"></a></p>
+        </div>
+      </div>
+    </div> <!-- footer content ends -->
+  </div> <!-- footer content-wrapper ends -->
+
+  <div class="copyright">
+    <p>Copyright 2019 | Unplugged</p>
+  </div>
+</footer>
 
 </html>
