--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreats</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,10 +22,51 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
+<!-- HEADER - Logo, Nav, Headline, Image -->
+<!-- Header: Logo, Nav bar> [About, FAQ] - Headline - Image **/ -->
+
+<header>
+  <div class="content-wrapper">
+    <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a> 
+    <div class="header-divider"></div>
+    <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+    </nav>  
+  </div>
+</header>
+
+
+<!-- CONTENT AREA - Newsletter signup, General info, Previous retreats **/ -->
+<!-- Content area: Newsletter signup> [Headline text, Paragraph text, Headline text, email field, submit button], Info about Unplugged> [Headline text, Background image, icons, text], Previous retreats> [Headline text, paragraph text, image] -->
+
 <body>
 
+  <main>
+
+    <section>
+      <h1>Retreat from the desk, return refreshed.</h1>
+      <img src="img/hero-image.jpg" alt="hero image">
+    </section>
+  
+    <aside>
+        <h4> Want to join the next retreat?</h4>
+        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        <h5>Find out more</h5>
+
+      <div>
+        <input type="text" name="name" value="email address">
+        <input type="button" value="Download Itinerary">
+      </div>
+
+    </aside>
+  
+  </main>
+
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <p></p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
@@ -37,5 +78,35 @@
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
+
+
+
+<!-- FOOTER - Contact, Social media, Copyright -->
+<!-- Footer: Contact> [Headline text, Contact info], Social media> [Headline text, Social icons], Copyright -->
+
+<footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+      <div class="contact">
+        <address>
+          <h4>Contact</h4>
+          <p>555-555-5555<br>hello@unplugged.com</p>
+        </address>
+      </div>
+      <div class="social-icons">
+        <h4>Social</h4>
+        <p><a href="https://www.facebook.com/" target="_blank"></a></p>
+        <p><a href="https://www.instagram.com/" target="_blank"></a></p>
+        <p><a href="https://www.twitter.com/" target="_blank"></a></p>
+        </div>
+      </div>
+    </div> <!-- footer content ends -->
+  </div> <!-- footer content-wrapper ends -->
+
+  <div class="copyright">
+    <p>Copyright 2019 | Unplugged</p>
+  </div>
+</footer>
+
 
 </html>
