--- a/index.html
+++ b/index.html
@@ -46,22 +46,80 @@
 
   <main>
 
-    <section>
-      <h1>Retreat from the desk, return refreshed.</h1>
-      <img src="img/hero-image.jpg" alt="hero image">
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
+        <img src="imgTEST/hero-image.jpg" alt="hero image">
+      </div>
     </section>
   
     <aside>
+      <div class="form-description">
         <h4> Want to join the next retreat?</h4>
         <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
         <h5>Find out more</h5>
+      </div>
 
-      <div>
+      <div class="form">
         <input type="text" name="name" value="email address">
         <input type="button" value="Download Itinerary">
       </div>
-
     </aside>
+
+    <section class="features">
+      <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of- without the bad wifi.</h2>
+        <article>
+          <p class="tent-icon"></p>
+          <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+        </article>
+
+        <article>
+          <p class="bed-icon"></p>
+          <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms and 4 breakout rooms.</p>
+        </article>
+
+        <article>
+          <p class="silverware-icon"></p>
+          <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+        </article>
+
+        <article>
+          <p class="footprints-icon"></p>
+          <p class="features-item-description">5 outdoor obstacle courses, including a private beach 1/2 mile from the bungalow.</p>
+        </article>
+
+        <article>
+          <p class="smiley-icon"></p>
+          <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+        </article>
+
+        <article>
+          <p class="wifi-icon"></p>
+          <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+        </article>
+      </div>
+    </section>
+
+
+    <section class="lacrue">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like these.</h2>
+        <article>
+          <img src="img/lacrue image TEST" alt="lacrue image">
+          <br><h4>LaCrue Bottling Co.<br>October 2018</h4>
+          <p>Lorem ipsum dolor sit amet, nobis dicant essent vim ei, eos ne alii oportere eloquentiam. Eu sit mazim docendi. Tota detraxit prodesset duo cu. Ne vel albucius appetere, sea melius repudiare philosophia ne. Est ad postea tacimates iudicabit. Vix id legere scripserit, animal atomorum interpretaris ad his. Tritani persius perpetua per at, id case philosophia pro.
+          </p>
+        </article>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="content-wrapper">
+
+      </div>  
+    </section>
+
   
   </main>
 
@@ -93,12 +151,15 @@
           <p>555-555-5555<br>hello@unplugged.com</p>
         </address>
       </div>
+
+      <div class="social">
       <div class="social-icons">
         <h4>Social</h4>
         <p><a href="https://www.facebook.com/" target="_blank"></a></p>
         <p><a href="https://www.instagram.com/" target="_blank"></a></p>
         <p><a href="https://www.twitter.com/" target="_blank"></a></p>
         </div>
+      </div>
       </div>
     </div> <!-- footer content ends -->
   </div> <!-- footer content-wrapper ends -->
