Added code for the about page

--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@
 
 <header>
   <div class="content-wrapper">
-    <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a> 
+    <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a> 
     <div class="header-divider"></div>
     <nav>
         <ul>
@@ -39,9 +39,42 @@
 </header>
 
 <body>
+  <main>
+      <section class="mission">
+        <div class="content-wrapper">
+          <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+          <div class="mission-content">
+            <p>Lorem ipsum dolor sit amet, mucius feugiat minimum mei et. Eos id oportere comprehensam, mea an sint laboramus, putent luptatum te usu. Modo integre equidem ea sed, quem partiendo liberavisse mel an, dolorum epicurei dissentiet ei mea. Error erroribus has ea, quas eirmod gloriatur ea eum, graeco utamur accumsan ei vel. Ne hinc ullum duo, eam in dicam iriure.</p>
+            <p>Lorem ipsum dolor sit amet, mucius feugiat minimum mei et. Eos id oportere comprehensam, mea an sint laboramus, putent luptatum te usu. Modo integre equidem ea sed, quem partiendo liberavisse mel an, dolorum epicurei dissentiet ei mea. Error erroribus has ea, quas eirmod gloriatur ea eum, graeco utamur accumsan ei vel. Ne hinc ullum duo, eam in dicam iriure.</p>
+          </div>
+        </div> <!--mission content wrapper ends-->
+      </section> 
+
+      <section class="map">
+        <div class="content-wrapper">
+          <figure></figure>
+        </div>
+      </section>
+
+      <section class="contact-section">
+        <div class="content-wrapper">
+          <h2>Contact us, because you all need this.</h2>
+          <div>
+            <h4>General information</h4>
+            <p>333 Main St., Lake Geneva, WI 53147<br>555-555-5555<br>hello@unplugged.com</p>
+          </div>
+          <div>
+            <h4>Chat with a facilitator</h4>
+            <p>555-555-5555<br>facilitator@unplugged.com</p>
+          </div>
+        </div>
+      </section>
+
+
+  </main>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+ 
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
@@ -67,6 +100,8 @@
           <p>555-555-5555<br>hello@unplugged.com</p>
         </address>
       </div>
+
+      <div class="social">
       <div class="social-icons">
         <h4>Social</h4>
         <p><a href="https://www.facebook.com/" target="_blank"></a></p>
