--- a/faq/index.html
+++ b/faq/index.html
@@ -27,7 +27,7 @@
 
 <header>
   <div class="content-wrapper">
-    <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a> 
+    <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a> 
     <div class="header-divider"></div>
     <nav>
         <ul>
@@ -68,6 +68,8 @@
           <p>555-555-5555<br>hello@unplugged.com</p>
         </address>
       </div>
+
+      <div class="social">
       <div class="social-icons">
         <h4>Social</h4>
         <p><a href="https://www.facebook.com/" target="_blank"></a></p>
