Added <address> tags

--- a/about/index.html
+++ b/about/index.html
@@ -60,8 +60,10 @@
         <div class="content-wrapper">
           <h2>Contact us, because you all need this.</h2>
           <div>
+            <address>
             <h4>General information</h4>
             <p>333 Main St., Lake Geneva, WI 53147<br>555-555-5555<br>hello@unplugged.com</p>
+            </address>
           </div>
           <div>
             <h4>Chat with a facilitator</h4>
