--- a/faq/index.html
+++ b/faq/index.html
@@ -41,7 +41,7 @@
 
 <body>
   <main>
-    <section class="faqs-page">
+    <section class="faq">
       <div class="content-wrapper">
         <h2>Frequently Asked Questions</h2>
         <div class="faqs-content">
