--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged Retreats</title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,9 +25,12 @@
 <!-- HEADER - Logo, Nav, Headline, Image -->
 <!-- Header: Logo, Nav bar> [About, FAQ] - Headline - Image **/ -->
 
+<body>
 <header>
   <div class="content-wrapper">
-    <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a> 
+    <a href="#">
+      <img src="" alt="unplugged logo">
+    </a> 
     <div class="header-divider"></div>
     <nav>
         <ul>
@@ -42,101 +45,103 @@
 <!-- CONTENT AREA - Newsletter signup, General info, Previous retreats **/ -->
 <!-- Content area: Newsletter signup> [Headline text, Paragraph text, Headline text, email field, submit button], Info about Unplugged> [Headline text, Background image, icons, text], Previous retreats> [Headline text, paragraph text, image] -->
 
-<body>
-
   <main>
 
     <section class="hero-area">
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
-        <img src="imgTEST/hero-image.jpg" alt="hero image">
+        <img src="" alt="">
       </div>
     </section>
   
     <aside>
-      <div class="form-description">
-        <h4> Want to join the next retreat?</h4>
-        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-        <h5>Find out more</h5>
-      </div>
-
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3> Want to join the next retreat?</h3>
+          <p>
+            Find out when we are holding our next retreat and how your company or team can sign up!
+          </p>
+        </div>
       <div class="form">
-        <input type="text" name="name" value="email address">
+        <h3>Find out more</h3>
+        <input type="text" name="name" value="name@email.com">
         <input type="button" value="Download Itinerary">
+        </div>
       </div>
+      <!-- aside content wrapper ends -->
     </aside>
 
     <section class="features">
       <div class="content-wrapper">
-        <h2>Have the work week you always dreamed of- without the bad wifi.</h2>
-        <article>
-          <p class="tent-icon"></p>
-          <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-        </article>
+        <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+        <div class="features-items">
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+            </p>
+          </article>
 
-        <article>
-          <p class="bed-icon"></p>
-          <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms and 4 breakout rooms.</p>
-        </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              12 private rooms with ensuite bathrooms, 2 group meeting rooms and 4 breakout rooms.
+            </p>
+          </article>
 
-        <article>
-          <p class="silverware-icon"></p>
-          <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
-        </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Private chef team providing on demand meals - just like your team kitchen.
+            </p>
+          </article>
 
-        <article>
-          <p class="footprints-icon"></p>
-          <p class="features-item-description">5 outdoor obstacle courses, including a private beach 1/2 mile from the bungalow.</p>
-        </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              5 outdoor obstacle courses, including a private beach 1/2 mile from the bungalow.
+            </p>
+          </article>
 
-        <article>
-          <p class="smiley-icon"></p>
-          <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-        </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Retreat facilitator to manage your day to day activities so you all get a chance to reset.
+            </p>
+          </article>
 
-        <article>
-          <p class="wifi-icon"></p>
-          <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
-        </article>
-      </div>
-    </section>
-
-
-    <section class="lacrue">
-      <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like these.</h2>
-        <article>
-          <img src="img/lacrue image TEST" alt="lacrue image">
-          <br><h4>LaCrue Bottling Co.<br>October 2018</h4>
-          <p>Lorem ipsum dolor sit amet, nobis dicant essent vim ei, eos ne alii oportere eloquentiam. Eu sit mazim docendi. Tota detraxit prodesset duo cu. Ne vel albucius appetere, sea melius repudiare philosophia ne. Est ad postea tacimates iudicabit. Vix id legere scripserit, animal atomorum interpretaris ad his. Tritani persius perpetua per at, id case philosophia pro.
-          </p>
-        </article>
-      </div>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Dedicated computer room for times that you must wifi.
+            </p>
+          </article>
+          </div>
+        </div>  
     </section>
 
     <section class="reviews">
       <div class="content-wrapper">
-
-      </div>  
+        <h2>Be a better team in 5 days, like this one.</h2>
+        <article>
+          <div>
+            <h3>LaCrue Bottling Co. October 2018</h3>
+            <p>
+              Lorem ipsum dolor sit amet, nobis dicant essent vim ei, eos ne alii oportere eloquentiam. Eu sit mazim docendi. Tota detraxit prodesset duo cu. Ne vel albucius appetere, sea melius repudiare philosophia ne. Est ad postea tacimates iudicabit. Vix id legere scripserit, animal atomorum interpretaris ad his. Tritani persius perpetua per at, id case philosophia pro.
+            </p>
+          </div>
+        </article>
+      </div>
     </section>
-
-  
   </main>
 
-  <!-- Add your site or application content here -->
-  <p></p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
-
+  <!--MAIN WRAPPER ENDS-->
 
 
 <!-- FOOTER - Contact, Social media, Copyright -->
@@ -146,18 +151,26 @@
   <div class="content-wrapper">
     <div class="footer-content">
       <div class="contact">
+        <h4>Contact</h4>
         <address>
-          <h4>Contact</h4>
-          <p>555-555-5555<br>hello@unplugged.com</p>
+          <p>
+            555-555-5555<br>
+            hello@unplugged.com
+          </p>
         </address>
       </div>
-
       <div class="social">
-      <div class="social-icons">
         <h4>Social</h4>
-        <p><a href="https://www.facebook.com/" target="_blank"></a></p>
-        <p><a href="https://www.instagram.com/" target="_blank"></a></p>
-        <p><a href="https://www.twitter.com/" target="_blank"></a></p>
+        <div class="social-icons">
+          <p>
+            <a href="https://www.facebook.com/" target="_blank"></a>
+          </p>
+          <p>
+            <a href="https://www.instagram.com/" target="_blank"></a>
+          </p>
+          <p>
+            <a href="https://www.twitter.com/" target="_blank"></a>
+          </p>
         </div>
       </div>
     </div> <!-- footer content ends -->
@@ -168,5 +181,16 @@
   </div>
 </footer>
 
+<script src="js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
 
+<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+<script>
+  window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+  ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+</script>
+<script src="https://www.google-analytics.com/analytics.js" async></script>
+
+</body>
 </html>
