Finished mobile styles css including flexbox

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,9 +25,10 @@
 <!-- HEADER - Logo, Nav, Headline, Image -->
 <!-- Header: Logo, Nav bar> [About, FAQ] - Headline - Image **/ -->
 
+<body>
 <header>
   <div class="content-wrapper">
-    <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a> 
+    <a href="#"><img src="" alt="unplugged logo"></a> 
     <div class="header-divider"></div>
     <nav>
         <ul>
@@ -38,7 +39,6 @@
   </div>
 </header>
 
-<body>
   <main>
       <section class="mission">
         <div class="content-wrapper">
