Added tablet media queries and breakpoints for all three pages of unplugged project

--- a/faq/index.html
+++ b/faq/index.html
@@ -44,19 +44,19 @@
     <section class="faq">
       <div class="content-wrapper">
         <h2>Frequently Asked Questions</h2>
-        <div class="faqs-content">
+        <div class="faq-content">
           <h4>How do I get to the Unplugged retreat?</h4>
           <p>Lorem ipsum dolor sit amet, mucius feugiat minimum mei et. Eos id oportere comprehensam, mea an sint laboramus, putent luptatum te usu. Modo integre equidem ea sed, quem partiendo liberavisse mel an, dolorum epicurei dissentiet ei mea. Error erroribus has ea, quas eirmod gloriatur ea eum, graeco utamur accumsan ei vel. Ne hinc ullum duo, eam in dicam iriure.</p>
         </div>
-        <div class="faqs-content">
+        <div class="faq-content">
           <h4>What kind of team is right for the Unplugged retreat?</h4>
           <p>Lorem ipsum dolor sit amet, mucius feugiat minimum mei et. Eos id oportere comprehensam, mea an sint laboramus, putent luptatum te usu. Modo integre equidem ea sed, quem partiendo liberavisse mel an, dolorum epicurei dissentiet ei mea. Error erroribus has ea, quas eirmod gloriatur ea eum, graeco utamur accumsan ei vel. Ne hinc ullum duo, eam in dicam iriure.</p>
         </div>
-        <div class="faqs-content">
+        <div class="faq-content">
           <h4>What size teams can you accomodate?</h4>
           <p>Lorem ipsum dolor sit amet, mucius feugiat minimum mei et. Eos id oportere comprehensam, mea an sint laboramus, putent luptatum te usu. Modo integre equidem ea sed, quem partiendo liberavisse mel an, dolorum epicurei dissentiet ei mea. Error erroribus has ea, quas eirmod gloriatur ea eum, graeco utamur accumsan ei vel. Ne hinc ullum duo, eam in dicam iriure.</p>
         </div>
-        <div class="faqs-content">
+        <div class="faq-content">
           <h4>Is there really no wifi available?</h4>
           <p>Lorem ipsum dolor sit amet, mucius feugiat minimum mei et. Eos id oportere comprehensam, mea an sint laboramus, putent luptatum te usu. Modo integre equidem ea sed, quem partiendo liberavisse mel an, dolorum epicurei dissentiet ei mea. Error erroribus has ea, quas eirmod gloriatur ea eum, graeco utamur accumsan ei vel. Ne hinc ullum duo, eam in dicam iriure.</p>
         </div>
