--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,9 @@
 <body>
 <header>
   <div class="content-wrapper">
-    <a href="#"><img src="" alt="unplugged logo"></a> 
+    <a href="#">
+      <img src="" alt="unplugged logo">
+    </a> 
     <div class="header-divider"></div>
     <nav>
         <ul>
