--- a/about/index.html
+++ b/about/index.html
@@ -31,9 +31,11 @@
 <body>
 <header>
   <div class="content-wrapper">
-    <a href="#">
-      <img src="" alt="unplugged logo">
-    </a> 
+    <figure>
+      <a href="#">
+        <img src="../img/unplugged-logo.png" alt="Logo photo">
+      </a> 
+    </figure>
     <div class="header-divider"></div>
     <nav>
         <ul>
