--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 <body>
 <header>
   <div class="content-wrapper">
+   <figure>
     <a href="#">
-      <img src="" alt="unplugged logo">
+      <img src="img/unplugged-logo.png" alt="Logo photo">
     </a> 
+  </figure>
     <div class="header-divider"></div>
     <nav>
         <ul>
@@ -53,7 +55,6 @@
     <section class="hero-area">
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
-        <img src="" alt="">
       </div>
     </section>
   
@@ -127,21 +128,24 @@
           </article>
           </div>
         </div>  
-    </section>
+    </section> <!------------Features content ends --------------->
 
     <section class="reviews">
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
         <article>
-          <div>
-            <h3>LaCrue Bottling Co. October 2018</h3>
-            <p>
-              Lorem ipsum dolor sit amet, nobis dicant essent vim ei, eos ne alii oportere eloquentiam. Eu sit mazim docendi. Tota detraxit prodesset duo cu. Ne vel albucius appetere, sea melius repudiare philosophia ne. Est ad postea tacimates iudicabit. Vix id legere scripserit, animal atomorum interpretaris ad his. Tritani persius perpetua per at, id case philosophia pro.
-            </p>
-          </div>
+            <figure>
+              <img src="img/omar-lopez-unsplash.png" alt="Group photo">
+            </figure>
+            <div>
+              <h3>LaCrue Bottling Co. October 2018</h3>
+              <p>
+                Lorem ipsum dolor sit amet, nobis dicant essent vim ei, eos ne alii oportere eloquentiam. Eu sit mazim docendi. Tota detraxit prodesset duo cu. Ne vel albucius appetere, sea melius repudiare philosophia ne. Est ad postea tacimates iudicabit. Vix id legere scripserit, animal atomorum interpretaris ad his. Tritani persius perpetua per at, id case philosophia pro.
+              </p>
+            </div>
         </article>
       </div>
-    </section>
+    </section> <!---------Reviews content ends-------------->
   </main>
 
   <!--MAIN WRAPPER ENDS-->
