--- a/about/index.html
+++ b/about/index.html
@@ -58,9 +58,11 @@
       </section> 
 
       <section class="map">
-        <div class="content-wrapper">
-          <figure></figure>
-        </div>
+        
+          <figure>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2917.03498523788!2d-88.22356558509458!3d43.01965077914811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8805a890d341c36d%3A0x5c2b19d01ca0fac5!2sFrame%20Park%20Formal%20Gardens!5e0!3m2!1sen!2sus!4v1652204983645!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </figure>
+        
       </section>
 
       <section class="contact-section">
