--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <script src="https://kit.fontawesome.com/70a9695cff.js" crossorigin="anonymous"></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
@@ -81,6 +82,7 @@
         <div class="features-items">
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-campground"></i>
             </p>
             <p class="features-item-description">
               Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
@@ -89,6 +91,7 @@
 
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-bed"></i>
             </p>
             <p class="features-item-description">
               12 private rooms with ensuite bathrooms, 2 group meeting rooms and 4 breakout rooms.
@@ -97,6 +100,7 @@
 
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-utensils"></i>
             </p>
             <p class="features-item-description">
               Private chef team providing on demand meals - just like your team kitchen.
@@ -105,6 +109,7 @@
 
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-shoe-prints"></i>
             </p>
             <p class="features-item-description">
               5 outdoor obstacle courses, including a private beach 1/2 mile from the bungalow.
@@ -113,6 +118,7 @@
 
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-smile"></i>
             </p>
             <p class="features-item-description">
               Retreat facilitator to manage your day to day activities so you all get a chance to reset.
@@ -121,6 +127,7 @@
 
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-wifi"></i>
             </p>
             <p class="features-item-description">
               Dedicated computer room for times that you must wifi.
