--- a/about/index.html
+++ b/about/index.html
@@ -114,11 +114,17 @@
       </div>
 
       <div class="social">
-      <div class="social-icons">
-        <h4>Social</h4>
-        <p><a href="https://www.facebook.com/" target="_blank"></a></p>
-        <p><a href="https://www.instagram.com/" target="_blank"></a></p>
-        <p><a href="https://www.twitter.com/" target="_blank"></a></p>
+        <div class="social-icons">
+          <h4>Social</h4>
+          <p>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          </p>
+          <p>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+          </p>
+          <p>
+            <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+          </p>
         </div>
       </div>
     </div> <!-- footer content ends -->
