--- a/faq/index.html
+++ b/faq/index.html
@@ -103,9 +103,15 @@
       <div class="social">
       <div class="social-icons">
         <h4>Social</h4>
-        <p><a href="https://www.facebook.com/" target="_blank"></a></p>
-        <p><a href="https://www.instagram.com/" target="_blank"></a></p>
-        <p><a href="https://www.twitter.com/" target="_blank"></a></p>
+        <p>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        </p>
+        <p>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </p>
+        <p>
+          <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+        </p>
         </div>
       </div>
     </div> <!-- footer content ends -->
